--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
     "name": "usarms",
     "version": "0.1.0",
     "private": true,
-    "dependencies": {
-        "chart.js": "^2.9.4",
-        "datamaps": "^0.5.9",
-        "i18n-iso-countries": "^6.3.0",
-        "react-chartjs-2": "^2.11.1"
-    },
     "devDependencies": {
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.1",
-        "web-vitals": "^0.2.4"
+        "web-vitals": "^0.2.4",
+        "chart.js": "^2.9.4",
+        "datamaps": "^0.5.9",
+        "i18n-iso-countries": "^6.3.0",
+        "react-chartjs-2": "^2.11.1"
     },
     "scripts": {
         "start": "react-scripts start",
