--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
     "name": "usarms",
     "version": "0.1.0",
     "private": true,
+    "home": "https://yhafez.github.io/USArmsTrade/",
     "devDependencies": {
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-scripts": "4.0.1",
-        "web-vitals": "^0.2.4",
         "chart.js": "^2.9.4",
         "datamaps": "^0.5.9",
+        "gh-pages": "^3.1.0",
         "i18n-iso-countries": "^6.3.0",
-        "react-chartjs-2": "^2.11.1"
+        "react": "^17.0.1",
+        "react-chartjs-2": "^2.11.1",
+        "react-dom": "^17.0.1",
+        "react-scripts": "4.0.1",
+        "web-vitals": "^0.2.4"
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
-        "eject": "react-scripts eject"
+        "build": "react-scripts build && rm -rf docs && mv build docs",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -34,5 +38,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "dependencies": {}
 }
