--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build && rm -rf docs && mv build docs",
-        "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "build": "react-scripts build",
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
